refactor FinnhubClient: searchAllStock() method; extract stock filtering logic into separate filterEnrichedSymbols() method;